# banana-back

./: .env  .gitignore  .output.txt  Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  package-lock.json  package.json  server.go  server_test.go  tsconfig.json
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yaml  ci.yml  deploy.yml
api/: account_controller.go  account_handlers.go  account_handlers_test.go  essais.go  example_controller.go  example_controller_test.go  httphandler.go  profile_controller.go  profile_controller_test.go  test_config.go  types.go  views.go
api/mocks/: MockAccountRepository.go  MockProfileRepository.go
application/: CreateProfileUseCase.go  create_profile_use_case.go  create_profile_use_case_test.go
config/: config.go  database.go  database_test.go  default.yaml  local.yaml
docker/: docker-compose.yml
domain/: account.go  account_line.go  account_test.go  frequency.go  period.go  repository.go
domain/account/: Account.go  account.go  account_repository.go  account_test.go  budget.go  transaction.go
domain/profile/: profile.go  profile_repository.go  profile_test.go
entity/src/: accounts.rs  lib.rs  mod.rs  prelude.rs  profiles.rs
initializers/: database_initializer.go
k8s/: Makefile  README.md  banana-back.yaml  ingress.yaml
k8s/cloud/: 01-external-secret.yaml  02-configmap.yaml  02-secret-store.yaml  03-deployment.yaml  03-external-secret.yaml  04-configmap.yaml  05-deployment.yaml  06-service.yaml
k8s/docker-compose/: docker-compose.yml
k8s/keycloak/: keycloak-config.yaml  keycloak-deployment.yaml  keycloak-service.yaml  kustomization.yaml
k8s/postgres/: postgres-service.yaml
migration/src/: lib.rs  (+2 more)
migrations/: 000001_create-account-table.up.sql  000002_create-account-table.up.sql  000002_fake-accounts.up.sql  000003_add_useres.up.sql  000003_create-profile-tables.up.sql  1753979783733-PostRefactoring.ts  migration.go
product/: product.go  product_test.go
repositories/: account_entity.go  account_repository.go  account_repository_test.go  bun_account_repository.go  bun_account_repository_test.go  bun_profile_repository.go  bun_profile_repository_test.go  profile_entity.go  repository.go  repository_test_suite.go  suite_test.go  types.go
scripts/: migrate.sh
src/: fastify.types.ts  index.ts  main.rs
tests/: integration_test.rs
testutils/: logger.go
user/: user_handler.go  user_handler_test.go
(+91 files in other folders)
