[package]
name = "banana-back-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
migration = { path = "migration" } # depends on your needs
entity = { path = "entity" }
actix-web = "4"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock" ] }
log = "0.4.22"
chrono = "0.4.38"
env_logger = "0.11.5"
serde = { version = "1.0.204", features = ["derive"] }
async-std = "1.13.0"
openid = "0.16"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
url = "2.2"
actix-cors = "0.6"
actix-session = { version = "0.10.1", features = ["cookie-session", "redis-session"] }