[package]
name = "banana-back"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
migration = { path = "migration" } # depends on your needs
entity = { path = "entity" }
actix-web = "4"
sea-orm = { version = "1.1.4", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock" ] }
log = "0.4.22"
chrono = "0.4.38"
env_logger = "0.11.5"
serde = { version = "1.0.204", features = ["derive"] }
async-std = "1.13.0"
openid = { version = "0.16", default-features = false, features = ["rustls"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
url = "2.2"
actix-cors = "0.6"
actix-session = { version = "0.10.1", features = ["cookie-session", "redis-session"] }
rust_decimal = { version = "1.30", features = ["serde-float"] }
config = { version = "0.14", features = ["yaml"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true